AWS Terraform Templates/NoViolation-RDS.tf
provider "aws" {
  version = "~> 2.0"
  region  = "us-east-1"
}

data "aws_caller_identity" "current" {}

resource "aws_db_instance" "RDSInstance" {
  allocated_storage    = 20
  storage_type         = "gp2"
  engine               = "mysql"
  engine_version       = "5.7"
  instance_class       = "db.t2.micro"
  name                 = "mydb"
  username             = "foo"
  password             = "foobarbaz"
  parameter_group_name = "default.mysql5.7"

  storage_encrypted    = true
  backup_retention_period = 10
  vpc_security_group_ids = ["${aws_security_group.DBSG.id}"]
  kms_key_id           = ${aws_kms_external_key.ExternalKey.id}

  tags = {
    "key"       = "Name"
    "value"     = "shift-left"
  }
}

resource "aws_kms_external_key" "ExternalKey" {
  enabled = true
}

resource "aws_db_event_subscription" "RDSEventSubscription" {
  name      = "RDSEventSubscription"
  sns_topic = "someSNSarn"

  source_type = "db-instance"
  source_ids  = ["${aws_db_instance.RDSInstance.id}"]
  enabled     = true
  event_categories = [
    "availability",
    "deletion",
    "failover",
    "failure",
  ]
}

resource "aws_security_group" "DBSG" {
  name        = "DBSG"
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
